adding a new string for toggling proper alphanumeric sorting

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -237,6 +237,7 @@
     <string name="ascending">تصاعدي</string>
     <string name="descending">تنازلي</string>
     <string name="use_for_this_folder">استخدم لهذا المجلد فقط</string>
+    <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">هل أنت متأكد من أنك تريد متابعة الحذف؟</string>
