--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -240,6 +240,7 @@
     <string name="ascending">Uzlazno</string>
     <string name="descending">Silazno</string>
     <string name="use_for_this_folder">Koristi samo za ovu mapu</string>
+    <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Jeste li sigurni da želite nastaviti s brisanjem?</string>
