--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -234,6 +234,7 @@
     <string name="ascending">Naik</string>
     <string name="descending">Turun</string>
     <string name="use_for_this_folder">Gunakan hanya untuk folder ini</string>
+    <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Anda yakin ingin melanjutkan penghapusan?</string>
