--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -234,6 +234,7 @@
     <string name="ascending">오름차 순</string>
     <string name="descending">내림차 순</string>
     <string name="use_for_this_folder">현재 폴더만 적용</string>
+    <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">정말로 삭제 하시겠습니까?</string>
