--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -240,6 +240,7 @@
     <string name="ascending">Vzostupne</string>
     <string name="descending">Klesajúco</string>
     <string name="use_for_this_folder">Použiť iba pre tento priečinok</string>
+    <string name="sort_numeric_parts">Zoradiť časti s číslami podľa hodnoty</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Ste si istý, že chcete pokračovať s vymazaním?</string>
