--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -237,6 +237,7 @@
     <string name="ascending">за зростанням</string>
     <string name="descending">за спаданням</string>
     <string name="use_for_this_folder">Використовувати тільки для цієї теки</string>
+    <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Ви впевнені, що хочете продовжити видалення?</string>
