--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -249,6 +249,7 @@
     <string name="ascending">Esgynnol</string>
     <string name="descending">Disgynnol</string>
     <string name="use_for_this_folder">Defnyddio i\'r ffolder hon yn unig</string>
+    <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Wyt ti\'n bendant am barhau i ddileu?</string>
