--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -237,6 +237,7 @@
     <string name="ascending">Nouseva</string>
     <string name="descending">Laskeva</string>
     <string name="use_for_this_folder">Käytä vain tässä kansiossa</string>
+    <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Haluatko varmasti poistaa pysyvästi?</string>
