--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -237,7 +237,7 @@
     <string name="ascending">Αύξουσα</string>
     <string name="descending">Φθίνουσα</string>
     <string name="use_for_this_folder">Χρήση μόνο σε αυτόν το φάκελο</string>
-    <string name="sort_numeric_parts">Αριθμητ. τμήμ. κατά πραγμ. τιμή</string> <!-- May be too long to display correctly, this is the exact translation   >Ταξινόμηση αριθμητικών τμημάτων κατά πραγματική τιμή< -->
+    <string name="sort_numeric_parts">Αριθμητ. τμήμ. κατά πραγμ. τιμή</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Είστε βέβαιοι ότι θέλετε να συνεχίσετε τη διαγραφή?</string>
