adding a new string for creating shortcuts

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -222,6 +222,7 @@
     <string name="undo">Desfer</string>
     <string name="redo">Refer</string>
     <string name="print">Imprimir</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar per</string>
