--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -225,6 +225,7 @@
     <string name="undo">Zpět</string>
     <string name="redo">Znovu</string>
     <string name="print">Tisk</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Seřadit dle</string>
