--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -234,6 +234,7 @@
     <string name="undo">Dad-wneud</string>
     <string name="redo">Ail-wneud</string>
     <string name="print">Argraffu</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trefnu yn ôl</string>
