--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -222,6 +222,7 @@
     <string name="undo">Αναίρεση</string>
     <string name="redo">Επανάληψη</string>
     <string name="print">Εκτύπωση</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ταξινόμηση κατά</string>
