--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -222,6 +222,7 @@
     <string name="undo">Annuler</string>
     <string name="redo">Répéter</string>
     <string name="print">Imprimer</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trier par</string>
