--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -222,6 +222,7 @@
     <string name="undo">Annulla</string>
     <string name="redo">Ripeti</string>
     <string name="print">Stampa</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordina per</string>
