--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -222,6 +222,7 @@
     <string name="undo">Angre</string>
     <string name="redo">Annuler angre</string>
     <string name="print">Skriv ut</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorter etter</string>
