--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -222,6 +222,7 @@
     <string name="undo">Ongedaan maken</string>
     <string name="redo">Opnieuw</string>
     <string name="print">Printen</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorteren op</string>
