--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -221,6 +221,7 @@
     <string name="undo">Поништи измене</string>
     <string name="redo">Поврати измене</string>
     <string name="print">Штампај</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортирај према</string>
