--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -222,6 +222,7 @@
     <string name="undo">Повернути</string>
     <string name="redo">Повторити</string>
     <string name="print">Print</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортувати за</string>
