--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -222,6 +222,7 @@
     <string name="undo">تراجع</string>
     <string name="redo">إعادة</string>
     <string name="print">Print</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">ترتيب حسب</string>
