--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -222,6 +222,7 @@
     <string name="undo">Geri al</string>
     <string name="redo">Təkrar et</string>
     <string name="print">Print</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sırala</string>
