--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -225,6 +225,7 @@
     <string name="undo">Poništi promjenu</string>
     <string name="redo">Ponovi promjenu</string>
     <string name="print">Print</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortiraj po</string>
