--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -219,6 +219,7 @@
     <string name="undo">Urungkan</string>
     <string name="redo">Ulangi</string>
     <string name="print">Print</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Urut berdasarkan</string>
