--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -225,6 +225,7 @@
     <string name="undo">Späť</string>
     <string name="redo">Obnoviť</string>
     <string name="print">Tlačiť</string>
+    <string name="create_shortcut">Vytvoriť skratku</string>
 
     <!-- Sorting -->
     <string name="sort_by">Na zoradenie použiť</string>
