--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -222,6 +222,7 @@
     <string name="undo">Geri al</string>
     <string name="redo">Yinele</string>
     <string name="print">Print</string>
+    <string name="create_shortcut">Create shortcut</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sıralama ölçütü</string>
