--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -90,7 +90,7 @@
     <string name="saving">Gemmer…</string>
     <string name="could_not_create_folder">Kunne ikke oprette mappen %s</string>
     <string name="could_not_create_file">Kunne ikke oprette filen %s</string>
-    <string name="no_new_items">No new items have been found</string>
+    <string name="no_new_items">Der blev ikke fundet nogen nye filer</string>
 
     <!-- Create new -->
     <string name="create_new">Opret ny</string>
