--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -64,6 +64,7 @@
     <string name="source_file_doesnt_exist">Dyw\'r ffeil tarddiad %s ddim yn bodoli</string>
     <string name="prepend_filenames">Rhagddodi enwau ffeiliau</string>
     <string name="append_filenames">Ôl-ddodi enwau ffeiliau (cyn estyniad y ffeil)</string>
+    <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m - minute\n%s - second</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copïo</string>
