--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -64,6 +64,7 @@
     <string name="source_file_doesnt_exist">Izvorišna datoteka %s ne postoji</string>
     <string name="prepend_filenames">Dodavanje na početak imena datoteke</string>
     <string name="append_filenames">Dodavanje naziva datoteka (prije tipa datoteke)</string>
+    <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m - minute\n%s - second</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopiraj</string>
