--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -64,7 +64,7 @@
     <string name="source_file_doesnt_exist">To αρχείο προέλευσης %s δεν υπάρχει</string>
     <string name="prepend_filenames">Προεπιλεγμένα ονόματα αρχείων</string>
     <string name="append_filenames">Προσθέστε ονόματα αρχείων (πρίν την επέκταση)</string>
-    <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m - minute\n%s - second</string>
+    <string name="rename_date_time_pattern">%Y - έτος\n%M - μήνας\n%D - ημέρα\n%h - ώρα\n%m - λεπτό\n%s - δευτ/το</string>
 
     <!-- Copy / Move -->
     <string name="copy">Αντιγραφή</string>
