--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -145,7 +145,7 @@
     <string name="root">Корінь</string>
     <string name="wrong_root_selected">Обрано невірну теку. Оберіть кореневу теку вашої SD-карти</string>
     <string name="sd_card_usb_same">Шляхи до SD-карти та USB-пристрою не можуть співпадати</string>
-    <string name="app_on_sd_card">Схоже, ви встановили додаток на SD-карту, що робить віджети додатку недоступними. Ви навіть не побачите їх у списку доступних віджетів.
+    <string name="app_on_sd_card">Схоже, ви встановили додаток на SD-карту, що робить віджети додатка недоступними. Ви навіть не побачите їх у списку доступних віджетів.
         Це обмеження системи, тож якщо ви хочете використовувати віджети, вам треба перемістити додаток до внутрішньої пам\'яті.</string>
 
     <!-- File properties -->
@@ -171,7 +171,7 @@
     <string name="text_color">Колір тексту</string>
     <string name="primary_color">Первинний колір</string>
     <string name="foreground_color">Колір переднього плану</string>
-    <string name="app_icon_color">Колір піктограми додатку</string>
+    <string name="app_icon_color">Колір піктограми додатка</string>
     <string name="bottom_navigation_bar_color">Колір нижньої навігаційної панелі</string>
     <string name="restore_defaults">Відновити стандартні параметри</string>
     <string name="change_color">Змінити колір</string>
@@ -183,7 +183,7 @@
     <string name="undo_changes_confirmation">Ви впевнені, що хочете скасувати зміни?</string>
     <string name="save_before_closing">Ви маєте незбережені зміни. Зберегти перед виходом?</string>
     <string name="apply_to_all_apps">Застосувати кольори до усіх додатків Simple Apps</string>
-    <string name="app_icon_color_warning">УВАГА: Деякі лончери некоректно опрацьовують зміну піктограми додатків. Якщо піктограма додатку зникне, спробуйте запустити його через Google Play або віджет, якщо доступний.
+    <string name="app_icon_color_warning">УВАГА: Деякі лончери некоректно опрацьовують зміну піктограми додатків. Якщо піктограма додатка зникне, спробуйте запустити його через Google Play або віджет, якщо доступний.
         Після запуску просто поверніть стандартний колір піктограми: #F57C00. У найгіршому випадку вам доведеться перевстановити додаток.</string>
     <string name="share_colors_success">Кольори успішно оновлено. Було додано нову тему під назвою \'Загальна\', використовуйте її для оновлення кольорів усіх додатків у майбутньому.</string>
     <string name="purchase_thank_you">
@@ -609,7 +609,7 @@
 
     <string name="sideloaded_app">
         <![CDATA[
-            Схоже, що ваша версія додатку пошкоджена. Будь ласка, завантажте оригінальну версію <a href="%s">here</a>.
+            Схоже, що ваша версія додатка пошкоджена. Будь ласка, завантажте оригінальну версію <a href="%s">here</a>.
         ]]>
     </string>
 
